cargo-features = ["resolver"]

[workspace]
members = [
	"faucet",
	"traits",
	"relaychain-info",
	"price-oracle",
	"route-executor",
	"transaction-multi-payment",
	"asset-registry",
	"adapters",
	"collator-rewards",
	"transaction-pause",
	"ema-oracle",
	"liquidity-mining",
	"currencies",
	"stableswap",
	"test-utils",
	"duster",
    "nft",
	"ema-oracle",
]

resolver = "2"
