cargo-features = ["resolver"]

[workspace]
members = [
	"faucet",
	"traits",
	"relaychain-info",
	"price-oracle",
	"route-executor",
	"transaction-multi-payment",
	"nft",
	"asset-registry",
	"adapters",
	"collator-rewards",
	"transaction-pause",
	"ema-oracle",
	"liquidity-mining",
	"currencies",
	"stableswap",
	"test-utils",
	"dynamic-fees",
	"duster",
	"otc",
]

resolver = "2"
