[package]
name = "amm-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "1.0.0"
sp-arithmetic= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false}


[features]
default = ["std"]
std = []
