[package]
name = "pallet-asset-registry"
version = "2.0.1"
description = "Pallet for asset registry management"
authors = ["GalacticCouncil"]
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/warehouse"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

[dependencies]
codec.workspace = true
scale-info.workspace = true
primitive-types = { default-features = false, version = "0.12.0" }
serde = { features = ["derive"], optional = true, version = "1.0.137" }

# ORML dependencies
orml-traits.workspace = true

# Substrate dependencies
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-arithmetic.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

# HydraDX dependencies
hydradx-traits = { path = "../traits", default-features = false }

# Optionals
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false, optional = true }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false, optional = true }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false, optional = true }

[dev-dependencies]
sp-io.workspace = true
polkadot-xcm = { package = "xcm", git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29", default-features = false }
test-utils = { path = "../test-utils", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  "serde/std",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "hydradx-traits/std",
  "sp-api/std",
  "frame-benchmarking/std",
  "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]

