[package]
name = "pallet-circuit-breaker"
version = "1.0.0"
authors = ["GalacticCouncil <hydradx@galacticcouncil.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/galacticcouncil/warehouse"
repository = "https://github.com/galacticcouncil/warehouse"
description = "Circuit breakers for AMMs"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { features = ["derive"], optional = true, version = "1.0.136" }
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.1.5" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Local dependencies
hydradx-traits = { path = "../traits", default-features = false }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false , optional = true}
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

[dev-dependencies]
test-utils = { path = "../test-utils" }
pretty_assertions = "1.2.1"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'serde/std',
    'scale-info/std',
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]
