[package]
name = 'pallet-faucet'
authors = ['GalacticCouncil']
description = 'Simple token faucet to dispence resource on dev chain'
edition = '2018'
license = 'Apache 2.0'
repository = "https://github.com/galacticcouncil/warehouse/tree/master/faucet"
version = '0.1.0'

[dependencies]
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.3.1" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { features = ["derive"], optional = true, version = "1.0.101" }

# ORML dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "1c80da43a720d1b957e1ba12238e4d98b2ee8cf9", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "1c80da43a720d1b957e1ba12238e4d98b2ee8cf9", default-features = false }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

[features]
default = ['std']
std = [
  'serde/std',
  'codec/std',
  'sp-std/std',
  'frame-support/std',
  'frame-system/std',
  'orml-tokens/std',
]
