[package]
name = 'pallet-faucet'
version = '0.2.2'
description = 'Simple token faucet to dispence resource on dev chain'
authors = ['GalacticCouncil']
edition = '2021'
license = 'Apache 2.0'
repository = "https://github.com/galacticcouncil/warehouse/tree/master/faucet"

[dependencies]
codec.workspace = true
scale-info.workspace = true
serde = { features = ["derive"], optional = true, version = "1.0.137" }

# ORML dependencies
orml-tokens.workspace = true
orml-traits.workspace = true

# Substrate dependencies
frame-support.workspace = true
frame-system= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-io.workspace = true
test-utils = { path = "../test-utils", default-features = false }

[features]
default = ['std']
std = [
  'serde/std',
  'codec/std',
  'sp-std/std',
  'frame-support/std',
  'frame-system/std',
  'orml-tokens/std',
]
