[package]
name = "pallet-liquidity-mining"
version = "3.0.0"
description = "Liquidity mining"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/warehouse"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/warehouse"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
sp-arithmetic.workspace = true

# ORML dependencies
orml-traits.workspace = true

# HydraDX dependencies
hydradx-traits = { path = "../traits", default-features = false }
#NOTE: This is bacause we are not using latest version of asset-registry for now.
registry-traits = { package="hydradx-traits", git = "https://github.com/galacticcouncil/warehouse", rev="fcebd285141ce9ed15136f6102fa6396605d96af", default-features = false }
hydra-dx-math = { git = "https://github.com/galacticcouncil/HydraDX-math", rev="fdf7d6cdfb6968b826e6035c20b261a78a733573", default-features = false }

# Substrate dependencies
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
test-utils = { path="../test-utils" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.29" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.29" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
# This can be updated to lates after rust update(>=1.61)
fixed = { version = "=1.15.0", default-features = false }
proptest = "1.0.0"
pretty_assertions = "1.2.1"
rand = "0.8.5"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "orml-traits/std",
    "hydradx-traits/std",
    "sp-arithmetic/std",
    "sp-runtime/std",
    "scale-info/std",
    "hydra-dx-math/std",
]
try-runtime = ["frame-support/try-runtime"]
