[package]
name = "pallet-nft"
version = "7.1.0"
description = "A generic NFT pallet for managing non-fungible tokens"
authors = ["GalacticCoucil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/warehouse"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/warehouse"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
serde = { version = "1.0.137", optional = true, features = ["derive"] }

# TODO: this is just a temporary fix of https://github.com/paritytech/substrate/issues/12304
syn = "=1.0.99"

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-io.workspace = true
pallet-uniques.workspace = true

# ORML dependencies
orml-utilities.workspace = true

# HydraDX traits
hydradx-traits = { path = "../traits", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-core.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "pallet-uniques/std",
    "scale-info/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
