[package]
name = 'pallet-price-oracle'
version = '0.1.1'
description = 'Price oracle for AMM pools'
authors = ['GalacticCouncil']
edition = '2018'
license = 'Apache 2.0'
repository = 'https://github.com/galacticcouncil/warehouse'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.3.1'

[dependencies]
serde = {features = ['derive'], optional = true, version = '1.0.101'}
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# TODO remove this dependency once the AssetPair struct is moved to this repository
# Basilisk dependencies
primitives = { git = "https://github.com/galacticcouncil/basilisk-node", rev = "c0bf049f0ee91c392f163768ef707c94c7981c46", default-features = false}

# HydraDX dependencies
hydradx-traits = { path = "../traits", default-features = false }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, optional = true }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.12", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
pallet-xyk = { git = "https://github.com/galacticcouncil/basilisk-node", rev = "c0bf049f0ee91c392f163768ef707c94c7981c46", default-features = false }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ee37b76a7a8cf159e6c41851942758746318bb84" }
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ee37b76a7a8cf159e6c41851942758746318bb84" }
pallet-asset-registry = { git = "https://github.com/galacticcouncil/basilisk-node", rev = "dfa9549a4bc58136ffdd86b6876764268b1a7c06", default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-runtime/std',
  'sp-core/std',
  'sp-std/std',
  'primitives/std',
  'hydradx-traits/std',
  'scale-info/std',
]
