[package]
name = 'pallet-price-oracle'
version = '0.1.1'
description = 'Price oracle for AMM pools'
authors = ['GalacticCouncil']
edition = '2018'
license = 'Apache 2.0'
repository = 'https://github.com/galacticcouncil/warehouse'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.3.1'

[dependencies]
serde = {features = ['derive'], optional = true, version = '1.0.101'}
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# HydraDX dependencies
hydradx-traits = { path = "../traits", default-features = false }
hydra-dx-math = { git = "https://github.com/galacticcouncil/hydradx-math", rev = "ed5182a62741ab6d49b11c85290ddd05413cb666", default-features = false }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, optional = true }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ee37b76a7a8cf159e6c41851942758746318bb84" }
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ee37b76a7a8cf159e6c41851942758746318bb84" }

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-core/std',
  'sp-std/std',
  'hydradx-traits/std',
  'scale-info/std',
]
