[package]
name = 'pallet-price-oracle'
version = '0.3.2'
description = 'Price oracle for AMM pools'
authors = ['GalacticCouncil']
edition = '2021'
license = 'Apache 2.0'
repository = 'https://github.com/galacticcouncil/warehouse'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec.workspace = true
serde = {features = ['derive'], optional = true, version = '1.0.137'}
scale-info.workspace = true

# HydraDX dependencies
hydradx-traits = { path = "../traits", default-features = false }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false, optional = true }
frame-support.workspace = true
frame-system.workspace = true
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false, optional = true }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.29", default-features = false }
sp-std.workspace = true

[dev-dependencies]
sp-io.workspace = true
test-utils = { path = "../test-utils", default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-core/std',
  'sp-std/std',
  'hydradx-traits/std',
  'scale-info/std',
]
